--- a/singolo3.css
+++ b/singolo3.css
@@ -83,6 +83,16 @@ footer {
     padding-top: 0px;
 }
 
+#form form > input[type="submit"] {
+    width: 20%;
+    background: whitesmoke;
+    border: 1px solid white;
+}
+
+#form form > input[type="submit"]:hover {
+    background-color: #d6564f;
+}
+
 .contact-info .title-info {
     font-size: 18px;
     line-height: 18px;
@@ -95,6 +105,15 @@ footer {
 .contacts {
     padding-top: 15px;
     padding-left: 21px;
+}
+
+.contacts a {
+    color: #f0d8d9;
+    text-decoration: none;
+}
+
+.contacts a:hover {
+    color: blue;
 }
 
 .contacts p{
