fix: add little thing

--- a/style.css
+++ b/style.css
@@ -699,10 +699,13 @@ footer .social-links {
 .modal-view {
     height: 70%;
     width: 80%;
-    position: absolute;    
+    position: fixed;    
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
     margin: auto;
+    background-color: #666d89;
+    color: #dedede;
+    border: 1px solid black;
 }
